# warroom-scribe

./: .env.example  .gitignore  Cargo.toml
src/: commands.rs  formatter.rs  main.rs  session.rs  slack.rs  transcriber.rs  voice_handler.rs
