[package]
name = "warroom-scribe"
version = "0.1.0"
edition = "2021"

[dependencies]
# Framework de commandes slash — branche serenity-next (utilise serenity git/next en transitif)
# On ne déclare PAS serenity directement : poise l'apporte, et le fork songbird aussi,
# tous deux depuis la même branche "next" → cargo les unifie au même commit.
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }

# Voice avec support DAVE/E2EE intégré (fork de tazz4843, basé sur scripty-bot)
songbird = { git = "https://github.com/tazz4843/songbird", rev = "857c3fa", features = [
    "driver",
    "receive",  # Activer la réception audio (VoiceTick events)
    "serenity", # Intégration avec serenity (SerenityInit trait)
] }

# Protocole DAVE/MLS — chiffrement E2EE Discord (utilisé par songbird en interne)
davey = "0.1"

# Runtime async (équivalent de asyncio en Python)
tokio = { version = "1", features = ["full"] }

# Client HTTP pour l'API Slack — rustls évite la dépendance sur libssl-dev
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Sérialisation JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Chargement du fichier .env
dotenvy = "0.15"

# Transcription Whisper locale (wrape whisper.cpp — nécessite cmake)
whisper-rs = { version = "0.13", features = ["whisper-cpp-tracing", "cuda"] }

# Logging structuré (équivalent de logging en Python)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Timestamps timezone-aware (équivalent de datetime Python)
chrono = "0.4"
chrono-tz = "0.10"

# Requis pour appeler install_default() et résoudre l'ambiguïté aws-lc-rs vs ring
rustls = { version = "0.23", features = ["ring"], default-features = false }

# HashMap concurrent thread-safe (pour les buffers audio)
dashmap = "5"

# Macro async_trait (pour implémenter les traits async de songbird)
async-trait = "0.1"

# Encodage WAV en mémoire
hound = "3"

[profile.release]
opt-level = 3
lto = true
