[package]
name = "warroom-scribe"
version = "0.1.0"
edition = "2021"

[features]
# Activer sur la machine de prod avec RTX A2000 : cargo build --release --features cuda
cuda = ["whisper-rs/cuda"]

[dependencies]
# Framework de commandes slash (stable, serenity 0.12)
poise = "0.6.1"

# Voice avec support DAVE/E2EE — fork local de serenity-rs/songbird v0.6.0 patché
# pour corriger le mapping SSRC→user_id (opcode 12 ClientConnect ignoré par défaut)
songbird = { path = "../songbird", features = [
    "driver",
    "receive",  # Activer la réception audio (VoiceTick events)
    "serenity", # Intégration avec serenity (SerenityInit trait)
] }

# Runtime async (équivalent de asyncio en Python)
tokio = { version = "1", features = ["full"] }

# Client HTTP pour l'API Slack — rustls évite la dépendance sur libssl-dev
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Sérialisation JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Chargement du fichier .env
dotenvy = "0.15"

# Transcription Whisper locale (wrape whisper.cpp — nécessite cmake)
# Feature "cuda" activé séparément sur la machine de prod (RTX A2000)
whisper-rs = { version = "0.13", features = ["whisper-cpp-tracing"] }

# Logging structuré (équivalent de logging en Python)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Timestamps timezone-aware (équivalent de datetime Python)
chrono = "0.4"
chrono-tz = "0.10"

# Requis pour résoudre l'ambiguïté aws-lc-rs vs ring
rustls = { version = "0.23", features = ["ring"], default-features = false }

# HashMap concurrent thread-safe (pour les buffers audio)
dashmap = "5"

# Macro async_trait (pour implémenter les traits async de songbird)
async-trait = "0.1"

# Encodage WAV en mémoire
hound = "3"

[profile.release]
opt-level = 3
lto = true
